# rss-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish-on-main.yml:  docker-publish.yml  update-docker-hub-description.yml
src/: main.rs  tests.rs
